--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1112,3 +1112,14 @@ footer .container .banner .right {
   }
 }
 /**********************************************************************************************************************/
+/********************Menu Page Styling*******************************/
+/**********************************************************************************************************************/
+
+.MyMenu {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #f9fbf2;
+  font-size: 60px;
+}
